Implemented more use cases